# credit-risk

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
dashboard/: app.py  requirements.txt
docs/: API.md  DEPLOYMENT.md  MODEL_CARD.md
scripts/: export_model.py
src/credit_risk/api/: lambda_handler.py  main.py  model_store.py  schemas.py
src/credit_risk/data/: ingest.py  leakage.py  pipeline.py  schema.py
src/credit_risk/explain/: shap_explain.py
src/credit_risk/features/: engineer.py
src/credit_risk/models/: train.py
tests/: conftest.py  test_pipeline.py
tests/api/: test_api.py
tests/explain/: test_shap_explain.py
tests/models/: test_train.py
