[project]
name = "credit-risk"
version = "0.1.0"
description = "Credit Risk Scoring Engine — Home Credit Default Risk"
requires-python = ">=3.12"
dependencies = [
    # Data layer (Phase 1)
    "pandas>=2.2",
    "numpy>=1.26",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "scikit-learn>=1.5",
    "kaggle>=1.6",
    # Model training (Phase 2)
    "xgboost>=2.0",
    "mlflow>=2.14",
    "optuna>=3.0",
]

[project.optional-dependencies]
# Phase 3 — install with: uv sync --extra explainability
# Requires Python <3.13 due to llvmlite's ceiling
explainability = [
    "shap>=0.45",
]
# Phase 4 — install with: uv sync --extra api
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "httpx2>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/credit_risk"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
